--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,26 @@
+Sun Apr 24 22:05:59 2005  Laurent Monin <zas@norz.org>:
+
+	* src/bfu/leds.c:
+
+	Rework sync_leds() in an attempt to fix bug 649: always update when
+	clock is enabled, not perfect yet; change order of tests to make
+	this a last resort, and simplify leds backup code.  
+
+Sun Apr 24 17:42:08 2005  Laurent Monin <zas@norz.org>:
+
+	* src/util/: time.c, time.h:
+
+	Introduce timeval_div_int() that divide an integer by a timeval_T,
+	returning an integer value.  
+
+Sun Apr 24 17:08:28 2005  Laurent Monin <zas@norz.org>:
+
+	* src/sched/progress.c:
+
+	has_progress(): drop use of progress_elapsed_in_ms(), since it
+	converts timeval_T to milliseconds. timeval_to_milliseconds() will
+	disappear in near future.  
+
 Sat Apr 23 16:51:40 2005  Jonas Fonseca <fonseca@diku.dk>:
 
 	* src/protocol/Makefile.am:
