--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+Sun Apr 24 22:51:45 2005  Laurent Monin <zas@norz.org>:
+
+	* src/bfu/leds.h:
+
+	Make struct led use only 32 bits.  
+
+Sun Apr 24 22:40:53 2005  Laurent Monin <zas@norz.org>:
+
+	* src/bfu/: leds.c, leds.h:
+
+	Fix previous patch, leds and leds_backup have to be of same type...
+	Not perfect yet.  
+
+Sun Apr 24 22:18:31 2005  Laurent Monin <zas@norz.org>:
+
+	* src/bfu/leds.c:
+
+	sync_leds(): move clock test before leds test. Suggested by Jonas.  
+
 Sun Apr 24 22:05:59 2005  Laurent Monin <zas@norz.org>:
 
 	* src/bfu/leds.c:
