--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,40 @@
+Tue May  3 21:05:32 2005  Adam Golebiowski <adamg@pld-linux.org>:
+
+	* po/pl.po:
+
+	Dropped old, commented out entries 
+
+Tue May  3 20:12:38 2005  Adam Golebiowski <adamg@pld-linux.org>:
+
+	* po/pl.po:
+
+	Polish translation was updated 
+
+Tue May  3 18:21:34 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* po/da.po:
+
+	Update Danish translation.  
+
+Tue May  3 18:01:54 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* debian/: .cvsignore, control, control.in, rules:
+
+	Merge bits from the debian package.  
+
+Tue May  3 17:48:40 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* debian/changelog:
+
+	Merge bits from the debian changelog.  
+
+Tue May  3 17:30:02 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* doc/index.txt:
+
+	Hmm, looks like I forgot to remove the mime.html which is now part
+	of the manual.  
+
 Mon May  2 20:29:06 2005  Jonas Fonseca <fonseca@diku.dk>:
 
 	* src/: main.c, main.h, config/cmdline.c, config/cmdline.h:
