--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,31 @@
+Sat May  7 11:12:18 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/main.h:
+
+	Describe enum retval entries.  
+
+Sat May  7 11:11:54 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: main.c, config/cmdline.c:
+
+	Try to clearify the internal use of RET_COMMAND. Requested by
+	Miciah.  
+
+Sat May  7 10:48:16 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/config/options.inc:
+
+	Comment out bogus option alias. Spotted by Miciah.  
+
+Fri May  6 23:34:41 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/scripting/lua/core.c:
+
+	In alert_lua_error, pass a copy of the message instead of the
+	original to info_box. This avoids a problem reported by Jon Shapcott
+	of garbled messages caused by the use of the message in the BFU code
+	after it has been freed elsewhere.  
+
 Fri May  6 11:27:42 2005  Jonas Fonseca <fonseca@diku.dk>:
 
 	* src/protocol/smb/smb.c:
