--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,69 @@
+Mon May  9 21:47:21 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/scripting/: guile/hooks.c, lua/hooks.c, perl/hooks.c,
+	ruby/hooks.c:
+
+	Propagate mem_free_set.  
+
+Mon May  9 21:41:32 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/scripting/: guile/hooks.c, lua/hooks.c, perl/hooks.c,
+	ruby/hooks.c:
+
+	Change the get-proxy hooks to free any old proxy string before
+	assigning the new one to eliminate leaks reported by Jonas.  
+
+Mon May  9 19:37:23 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/protocol/finger/finger.c:
+
+	Remove empty line.  
+
+Mon May  9 11:52:53 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/osdep/newwin.c:
+
+	Doh, typo in --with-xterm patch.  
+
+Mon May  9 11:17:08 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* debian/rules:
+
+	Configure --with-xterm="x-terminal-emulator -e".  
+
+Mon May  9 11:16:14 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* configure.in, src/setup.h, src/osdep/newwin.c:
+
+	Add --with-xterm configure option to specify how the X terminal
+	emulater is to be invoked. Useful for package maintainers.  
+
+Mon May  9 10:42:01 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* configure.in:
+
+	Normalize indentation.  
+
+Mon May  9 10:40:10 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* doc/: manual.html, manual.txt, book/book.xml,
+	man/man1/elinksmanual.1:
+
+	Remove stuff which is mostly related to the doc/ directory.  
+
+Mon May  9 10:34:15 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* doc/: Makefile.am, manual.html:
+
+	Fix UTF-8 issues with Latin-1 chars in Josés name.  
+
+Mon May  9 10:11:32 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* doc/: manual.html, manual.txt, man/man1/elinksmanual.1:
+
+	Sync with current manual version. Looks like it wasn't generated
+	after the typo and spell fixes made it in.  
+
 Sat May  7 11:12:18 2005  Jonas Fonseca <fonseca@diku.dk>:
 
 	* src/main.h:
