--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,184 @@
+Tue May 10 21:46:39 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/sched/session.c:
+
+	maybe_pre_format_html(): Simplify checking. get_cache_fragment()
+	checks if there are any fragments.  
+
+Tue May 10 21:25:09 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/scripting/lua/core.c:
+
+	Fix a cut-and-paste error in l_bind_key's conversion to handle_ref, 
+	spotted by Jonas.  
+
+Tue May 10 19:52:27 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/scripting/lua/core.c:
+
+	Report errors calling the function in eval_function. From Jon
+	Shapcott.  
+
+Tue May 10 19:51:44 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/scripting/lua/core.c:
+
+	Factor out the lua_pcall in handle_ref_on_stack into the new
+	eval_function. From Jon Shapcott.  
+
+Tue May 10 19:31:55 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/scripting/lua/core.c:
+
+	Fix one last use of lua_unref.  
+
+Tue May 10 19:29:05 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/scripting/lua/core.c:
+
+	Use lua_rawgeti and luaL_unref instead of obsolete lua_getref and
+	lua_unref.  From Jon Shapcott.  
+
+Tue May 10 19:27:56 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/scripting/lua/core.c:
+
+	Factor code to call Lua functions into the new handle_ref and
+	handle_ref_on_stack. Initial patch by Jon Shapcott.  
+
+Tue May 10 17:43:45 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/scripting/lua/core.c:
+
+	Use lua_setglobal to set elinks_home instead of using some
+	long-winded lua_dostring, lua_getglobal, lua_call weirdness. From
+	Jon Shapcott.  
+
+Tue May 10 17:39:36 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/: config/kbdbind.c, config/kbdbind.h, scripting/lua/core.c:
+
+	Rename bind_scripting_func to bind_key_to_event_name.  
+
+Tue May 10 17:31:23 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/scripting/lua/core.c:
+
+	Use the Lua 5 APIs to load the base, table, IO, string, and math
+	libraries. From Jon Shapcott.  
+
+Tue May 10 17:25:18 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/scripting/lua/core.c:
+
+	A few blank lines, from Jon Shapcott.  
+
+Tue May 10 17:20:47 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* AUTHORS, src/scripting/lua/core.c:
+
+	Use luaL_ref instead of lua_ref, which is obsolete with Lua 5.  Idea
+	by Jon Shapcott.  
+
+Tue May 10 13:28:29 2005  Laurent Monin <zas@norz.org>:
+
+	* src/protocol/ftp/parse.c:
+
+	skip_space_end(),skip_nonspace_end(): match against space only not
+	all white-space characters.  
+
+Tue May 10 13:14:43 2005  Laurent Monin <zas@norz.org>:
+
+	* src/protocol/ftp/parse.c:
+
+	No need to skip space until we fully support NetWare listings.  
+
+Tue May 10 13:11:33 2005  Laurent Monin <zas@norz.org>:
+
+	* src/protocol/ftp/parse.c:
+
+	Group code related to type setting.  
+
+Tue May 10 13:08:58 2005  Laurent Monin <zas@norz.org>:
+
+	* src/protocol/ftp/parse.c:
+
+	Drop useless @pos initialization.  
+
+Tue May 10 13:07:28 2005  Laurent Monin <zas@norz.org>:
+
+	* src/protocol/ftp/parse.c:
+
+	Fix a bad paste in ftp_unix_responses[].  
+
+Tue May 10 12:56:05 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/protocol/date.c:
+
+	parse_month(): Only skip three chars if the month is correctly
+	parsed. Fixes issue with ftp://freebsd.isc.org/ reported by zas.  
+
+Tue May 10 09:30:51 2005  Laurent Monin <zas@norz.org>:
+
+	* src/protocol/ftp/: parse.c, parse.h:
+
+	Add ftp parser debugging stuff for ftp://ftp.freebsd.org/ 
+
+Tue May 10 04:20:59 2005  Russ Rowan <rrowan@dandy.net>:
+
+	* contrib/perl/hooks.pl:
+
+	Revert 1.85 and 1.84 changes.  
+
+Tue May 10 03:36:42 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/intl/gettext/dcigettext.c:
+
+	_nl_find_message(): Fix strict aliasing warning. It would however be
+	great to remove some of all the casts in that function.  
+
+Tue May 10 03:31:19 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/bfu/inpfield.c:
+
+	check_number(): Fix strict aliasing warning.  
+
+Tue May 10 03:30:25 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/util/snprintf.h:
+
+	vasprintf(): Fix strict aliasing warning.  
+
+Tue May 10 02:56:46 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/util/memory.h:
+
+	mem_free_set(): Do not use local variable. It removes warnings about
+	strict aliasing and the compiler can now warn when it is not passed
+	a pointer reference.  
+
+Tue May 10 02:02:53 2005  Russ Rowan <rrowan@dandy.net>:
+
+	* contrib/perl/hooks.pl:
+
+	Really fix the quotes this time.  I forgot to escape the
+	parenthesis.  
+
+Tue May 10 01:58:03 2005  Russ Rowan <rrowan@dandy.net>:
+
+	* contrib/perl/hooks.pl:
+
+	Sometimes there's a semi-colon, sometimes there's not.  Anyway, now
+	it doesn't matter.  The demoronizer handles dumb-quotes properly
+	now.  
+
+Tue May 10 00:02:00 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* doc/: manual.html, manual.txt, book/introduction.xml,
+	man/man1/elinksmanual.1:
+
+	Add information about the LED status indicators.  
+
 Mon May  9 21:47:21 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
 
 	* src/scripting/: guile/hooks.c, lua/hooks.c, perl/hooks.c,
